# m00wm

./: Cargo.toml  Makefile  README.md  default-session.desktop
config/: m00wm.desktop  plasma-m00wm.desktop
examples/: layout-test.rs  state-extensions.rs
imagens/: m00alpine2-screen0.webm
scripts/: m00init  m00wm-startup.sh  m00wm.init  m00xephyr.sh  proba.sh  rodar-m00wm  setup-desktop
src/: bar.rs  layouts.rs  lib.rs  main.rs
