[package]
name = "m00wm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
penrose = "0.3.3"
penrose_ui = "0.3.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
